--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Bonus</th>
-                        <th>Bonus w %</th>
+                        <th>Trafienie</th>
+                        <th>Trafienie w %(z broni)</th>
                     </tr>
                 </thead>
                 <tbody>
