--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><input type="number" id="bonus" placeholder="Bonus"></td>
-                        <td><input type="number" id="bonusPercent" value="0" placeholder="Bonus w %" step="0.01"></td>
+                        <td><input type="number" id="bonus" value="0" placeholder="trafienie"></td>
+                        <td><input type="number" id="bonusPercent" value="0" placeholder="trafienie w %" step="0.01"></td>
                     </tr>
                 </tbody>        
             </table>
